frontend/src/app/edit/edit.component.scss
@import '../../styles.scss';
$sidebar-content-width: 225px;

.container {
    width: 100%;
    background-color: #6F6F6F;
}

.header {
    position: fixed;
    display: flex;
    width: 100%;
    justify-content: space-between;
    z-index: 10;
    margin: 0;
    background-image: linear-gradient(to right, #ffffff, #e7e7e7);
    border-bottom: 1px solid #ccc;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);

}

.header {
    width: 100%;
    top: 0;
    left: 0;
}


.titleWrapper {
    display: flex;
    margin: 10px;
    margin-left: 20px;
    height: 52px;
}

.docTitleWrapper {
    display: flex;
    margin-left: 10px;
}

.speedDialEditMenu {
    z-index: 20;
    margin-right: 100px;
    margin-top: 24px;

}

.toolsWrapper {
    display: flex;
    margin-left: 10px;
}

.documentTitle {
    margin: auto;
    font-size: 22px;
    font-weight: bold;
    border: 1px solid #00000000;
    border-radius: 5px;
    transition: 0.3s;
}

.documentTitle:hover {
    border: 1px solid #000000;
}

.documentTitle:focus {
    border: 1px solid #000000 !important;
}

.tool {
    padding: 5px;
    margin: 5px;
    border-radius: 5px;

}

.tool img {
    width: 30px;
    height: 30px;
}

.tool:hover {
    cursor: pointer;
    background-color: $light-grey;
}

.dropdownWrapper {
    margin: 10px;
}

.dropdownInput {
    margin: 0;
    background-color: #d9d9d9;
    padding: 5px;
    border-radius: 5px;
}

.dropdownText {
    margin: auto;
    white-space: nowrap;
}

.dropdownContent {
    display: none;
    position: fixed;
    background-color: $light-grey;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    padding: 12px 16px;
    z-index: 1;

    border-radius: 5px;
}

.dropdownInput:hover {
    cursor: pointer;
    background-color: darken($light-grey, 10%);
}

.dropdownWrapper:hover .dropdownContent {
    display: block;
    cursor: pointer;
}

.logoWrapper {
    height: 52px;
}

.logo {
    width: 50px;
}

.editor {
    display: flex;
    position: absolute;
    top: 127px;
    left: 260px;

    //     height: 100vh;
    z-index: -10;
    margin: 0;
    overflow: auto;
    flex-grow: 1;

    width: calc(100% - 260px);
    // width: 100%;
    max-height: calc(100svh - 127px);
}






.assetSidebar {
    position: fixed;
    top: 127px;
    left: 0;
    bottom: 0;
    width: 261px;
    background-color: #ffffff;
    border-right: 1px solid #c7c7c7;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    overflow-y: auto;
}

.pageName {
    width: 100%;
    height: 100%;
    position: relative;
    top: 50px;
    left: 100px;
}

div[contenteditable="true"]:focus {
    outline: none;

}

.sidebarHeaderWrapper {
    background-color: #ffffff;
    width: 252px;
    position: fixed;
}

.sidebarHeader {
    display: flex;
    margin: auto;
    width: $sidebar-content-width;
}

.sidebarHeaderText {
    margin: auto;
    font-size: 22px;
    font-weight: bold;
    width: 100%;
}

.sidebarHeaderTextWrapper {
    margin: auto;
    margin-left: 40px;
    text-align: justify;
}

.sidebarHeaderIconWrapper {
    border-radius: 5px;
    padding: 5px;
    display: flex;
    margin: 15px;
    margin-right: 0px;
}

.backWrapper {
    margin-left: 0px !important;
}

.sidebarHeaderIcon {
    margin: auto;
    width: 25px;
}

.sidebarHeaderIconWrapper:hover {
    cursor: pointer;
    background-color: $light-grey;
}

.assetSidebar hr {
    border: 1px solid #c7c7c7;
    margin: auto;
    width: $sidebar-content-width;
}

.alignDiv {
    height: 80px;
}

.assetWrapper {
    margin: auto;
    width: $sidebar-content-width;
    height: 157px;
    border-radius: 8px;

    background-color: #f0f0f0;
    margin-bottom: 30px;
}

.assetHeader {
    display: flex;
    padding: 10px;
}

.assetNameText {
    max-width: 100px;
    margin: auto;
    font-size: 15px;
    font-weight: bold;
    border: 1px solid #00000000;
    border-radius: 5px;
    transition: 0.3s;
}

.copyAsset {
    margin-left: 10px;
}

.deleteAsset {
    margin-right: 0;
    margin-left: auto;
}

.deleteAsset,
.copyAsset {
    border-radius: 5px;
    // display:flex;
    width: 30px;
    height: 30px;
    padding: 5px;
}

.deleteAsset:hover,
.copyAsset:hover {
    cursor: pointer;
    background-color: darken($light-grey, 10%);
}

.deleteAssetIcon,
.copyAssetIcon {
    margin: auto;
    width: 20px;
    height: 20px;
}

.assetContent {
    display: flex;
    margin: 10px;
    margin-top: 0;
}

.assetImage {
    margin: 0;
    border-radius: 10px;
    width: 100px;
    height: 100px;
    border: 1px solid #000000;
}

.assetDescription {
    margin-left: 5px;
}

.displayNone {
    display: none;
}

// .quill-editor {
//     border: none;
// }

.showAssetSidebar {
    position: fixed;
    top: 127px;
    left: 0;
    bottom: 0;
    display: none;
    left: 0;
    margin: 10px;
}

//REGION Below are all the stylings for the document editor.

.center-page {
    margin: auto;
    margin-top: 15px;
    margin-bottom: 50px;
    //padding: 50px;
    margin-left: max(50px, auto);
    height: 635px;
    min-width: 800px;
    background-color: #ffffff;
}

//.document-editor {
//  //padding: 50px;
//  height: auto;
//  min-width: 800px;
//  background-color: #ffffff;
//  overflow-x: auto;
//  border: 1px solid var(--ck-color-base-border);
//  border-radius: var(--ck-border-radius);
//
//  /* Set vertical boundaries for the document editor. */
//  max-height: 700px;
//
//  /* This element is a flex container for easier rendering. */
//  display: flex;
//  flex-flow: column nowrap;
//}

.document-editor__toolbar {
    /* Make sure the toolbar container is always above the editable. */
    z-index: 1;

    /* Create the illusion of the toolbar floating over the editable. */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .2);

    /* Use the CKEditor CSS variables to keep the UI consistent. */
    //   border-bottom: 1px solid var(--ck-color-toolbar-border);
    border: none;
}

/* Adjust the look of the toolbar inside the container. */
.document-editor__toolbar .ck-toolbar {
    border: 0;
    border-radius: 0;
}

/* Make the editable container look like the inside of a native word processor application. */
.document-editor__editable-container {
    padding: calc(2 * var(--ck-spacing-large));
    background: var(--ck-color-base-foreground);

    /* Make it possible to scroll the "page" of the edited content. */
    overflow-y: scroll;
}

.document-editor__editable-container .ck-editor__editable {
    /* Set the dimensions of the "page". */
    width: 15.8cm;
    min-height: 21cm;

    /* Keep the "page" off the boundaries of the container. */
    padding: 1cm 2cm 2cm;

    border: 1px hsl(0, 0%, 82.7%) solid;
    border-radius: var(--ck-border-radius);
    background: white;

    /* The "page" should cast a slight shadow (3D illusion). */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .1);

    /* Center the "page". */
    margin: 0 auto;
}

/* Make the editable container look like the inside of a native word processor application. */
.document-editor__editable-container {
    padding: calc(2 * var(--ck-spacing-large));
    background: var(--ck-color-base-foreground);

    /* Make it possible to scroll the "page" of the edited content. */
    overflow-y: scroll;
}

.document-editor__editable-container .ck-editor__editable {
    /* Set the dimensions of the "page". */
    width: 15.8cm;
    min-height: 21cm;

    /* Keep the "page" off the boundaries of the container. */
    padding: 1cm 2cm 2cm;

    border: 1px hsl(0, 0%, 82.7%) solid;
    border-radius: var(--ck-border-radius);
    background: white;

    /* The "page" should cast a slight shadow (3D illusion). */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .1);

    /* Center the "page". */
    margin: 0 auto;
}

/* Set the default font for the "page" of the content. */
.document-editor .ck-content,
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    font: 16px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* Adjust the headings dropdown to host some larger heading styles. */
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    line-height: calc(1.7 * var(--ck-line-height-base) * var(--ck-font-size-base));
    min-width: 6em;
}

/* Scale down all heading previews because they are way too big to be presented in the UI.
Preserve the relative scale, though. */
.document-editor .ck-heading-dropdown .ck-list .ck-button:not(.ck-heading_paragraph) .ck-button__label {
    transform: scale(0.8);
    transform-origin: left;
}

/* Set the styles for "Heading 1". */
.document-editor .ck-content h2,
.document-editor .ck-heading-dropdown .ck-heading_heading1 .ck-button__label {
    font-size: 2.18em;
    font-weight: normal;
}

.document-editor .ck-content h2 {
    line-height: 1.37em;
    padding-top: .342em;
    margin-bottom: .142em;
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3,
.document-editor .ck-heading-dropdown .ck-heading_heading2 .ck-button__label {
    font-size: 1.75em;
    font-weight: normal;
    color: hsl(203, 100%, 50%);
}

.document-editor .ck-heading-dropdown .ck-heading_heading2.ck-on .ck-button__label {
    color: var(--ck-color-list-button-on-text);
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3 {
    line-height: 1.86em;
    padding-top: .171em;
    margin-bottom: .357em;
}

/* Set the styles for "Heading 3". */
.document-editor .ck-content h4,
.document-editor .ck-heading-dropdown .ck-heading_heading3 .ck-button__label {
    font-size: 1.31em;
    font-weight: bold;
}

.document-editor .ck-content h4 {
    line-height: 1.24em;
    padding-top: .286em;
    margin-bottom: .952em;
}

/* Set the styles for "Paragraph". */
.document-editor .ck-content p {
    font-size: 1em;
    line-height: 1.63em;
    padding-top: .5em;
    margin-bottom: 1.13em;
}

/* Make the block quoted text serif with some additional spacing. */
.document-editor .ck-content blockquote {
    font-family: Georgia, serif;
    margin-left: calc(2 * var(--ck-spacing-large));
    margin-right: calc(2 * var(--ck-spacing-large));
}



// Above are all the stylings for the document editor

